gw-vs-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "safir-argo.b3lab.org"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: DISABLE
    hosts:
    - "safir-argo.b3lab.org"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts:
  - "safir-argo.b3lab.org"
  gateways:
  - argocd-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: argocd-server
        port:
          number: 80

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: argocd-dr
spec:
  host: argocd-server
  trafficPolicy:
    tls:
      mode: DISABLE
